# gerpar-scraper

./: .gitignore  README.md  Taskfile  main.py  pyproject.toml
src/: config.py  parser.py  scraper.py
